# vibeclicker

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: config.rs  main.rs
src/input/: clicker.rs  cursor.rs  hotkey.rs  mod.rs
src/ui/: state.rs  window.rs
