[package]
name = "vibeclicker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vibeclicker"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
tokio = { version = "1", features = ["full"] }
uinput = "0.1"
evdev = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
strip = true
